# [#23725] Duplicate contradicting messages on send mail error
# [#23696] Menus creation fail with 1.5-style menus metadata: using SimpleXMLElement attributes missing (string) typecast (Beat)
# [#23697] Menus with default view have a view=(empty) in URL and are missing other defined attributes and 1.5-type-menu-metada does not display menu type correctly in backend (Beat)


12-Dec-2010 Christophe Demko
 # Checking the table when copy a menu item (missing in [#23721])
 # [#23740] *RTL menu display issue in beez 2.0 (Jean-Marie Simonet)

12-Dec-2010 Jean-Marie Simonet
 # [#23721] SEF-URLs with mod_rewrite is not working for certain menu-aliases. Thanks Christophe.
 # [#23723] Various RTL issues with single contact display with Beez2. Thanks Iztik and Andrea.
 # [#23729] List Contacts in Category missing ID column of table on front-end. Thanks Bill.
 # [#23730] Backend - 500 an error has occurred when sorting an empty contact list. Thanks Bill.

11-Dec-2010 Jean-Marie Simonet
 # [#23715] Add Site Name to Page Title not working for articles/newsfeeds/weblinks selected via a category. Thanks Mark
 
11-Dec-2010 Christophe Demko
 # [#23720] *Changing Home set to ALL languages to another language and reverting = 500 + unpublish message
 # [#22648] function isCompatible incorrectly checks current version (Mark Dexter)
 # [#23498] Use Mootools Build-In Cookie Class in hide.js (Rouven Weßling)
 # [#23196] Articles created in front end have no rules saved in asset table* (Mark Dexter)
 # [#23480] Addition of missing handler parameter for JHTML modal behavior and fullScreen capability (Omar Ramos)
 # [#23424] Minor improvements to md_stylechanger.js (Rouven Weßling)
 # [#23719] Single Newsfeed SEF urls don't contain alias (Elin Waring)
 # [#23708] backend - missing RTL css definition for backloggedin-users (Andrea Tarr)
 # [#23372] Make Title in Read more button optional (bill richardson)
 # [#23707] Missing option to translate accordion section headers in backend main page