@@ -39,6 +39,7 @@ $ -> Language fix or change
 # [#23725] Duplicate contradicting messages on send mail error
 # [#23696] Menus creation fail with 1.5-style menus metadata: using SimpleXMLElement attributes missing (string) typecast (Beat)
 # [#23697] Menus with default view have a view=(empty) in URL and are missing other defined attributes and 1.5-type-menu-metada does not display menu type correctly in backend (Beat)
+# Fix up error trying to run installation with [#23745]  
 
 
 12-Dec-2010 Christophe Demko
